--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
     <link href="fontawesome/css/all.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="template/favicon.png">
     <title>Livros de Rua</title>
 </head>
 
