--- a/index.html
+++ b/index.html
@@ -13,171 +13,193 @@
     <title>Livros de Rua</title>
 </head>
 
-<body>
-    <header class="p-3 bg-dark text-white">
-        <div class="container">
-            <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-                <a href="base.html" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
-                    <img class="bi me-2" src="template/logo-header.png" alt="Logo livros de rua">
-                </a>
 
-                <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-                    <li><a href="index.html" class="nav-link px-2 text-secondary">Home</a></li>
-                    <li><a href="template/about.html" class="nav-link px-2 text-white">Quem Somos</a></li>
-                    <li><a href="#" class="nav-link px-2 text-white">Contato</a></li>
+<nav class="navbar navbar-dark navbar-expand-lg p-3 bg-dark">
+    <header class="container-fluid">
+        <a class="navbar-brand" href="template/base.html"><img class="bi me-2" src="template/logo-header.png"
+                alt="Logo livros de rua"></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse nav-align" id="navbarNav">
+            <div>
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link active text-white" href="index.html">Home <span
+                                class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-white" href="template/about.html">Quem Somos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-white" href="#">Contato</a>
+                    </li>
                 </ul>
-                <div class="text-end">
-                    <button type="button" class="btn btn-outline-light me-2">Login</button>
-                    <button type="button" class="btn btn-warning">Cadastrar</button>
-                </div>
+            </div>
+            <div>
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <button type="button" class="btn btn-outline-light me-2">Login</button>
+                    </li>
+                    <li class="nav-item">
+                        <button type="button" class="btn btn-warning">Cadastrar</button>
+                    </li>
+                </ul>
             </div>
         </div>
     </header>
+</nav>
 
-    <main class="container">
-        <div class="banner-home">
-            <img class="banner-img" src="template/banner-home-d.jpg" alt="Imagem com estande de livros">
-            <h1 class="titulo">Livros de Rua</h1>
-            <span class="sub-titulo">Seres pensantes de todo mundo, uni-vos!</span>
-            <div class="row busca">
-                <form class="d-flex">
-                    <input class="form-control me-2" type="search" placeholder="Faça sua pesquisa..."
-                        aria-label="Pesquisar">
-                    <button class="btn btn-outline-success" type="submit">Pesquisar</button>
-                </form>
-            </div>
+
+
+<main class="container-fluid">
+    <div class="banner-home">
+        <img class="banner-img img-fluid" src="template/banner-home-d.jpg" alt="Imagem com estande de livros">
+        <h1 class="titulo">Livros de Rua</h1>
+        <span class="sub-titulo">Seres pensantes de todo mundo, uni-vos!</span>
+        <div class="row busca">
+            <form class="d-flex">
+                <input class="form-control me-2" type="search" placeholder="Faça sua pesquisa..."
+                    aria-label="Pesquisar">
+                <button class="btn btn-outline-success" type="submit">Pesquisar</button>
+            </form>
         </div>
-
-
-        <div class="container">
-            <div class="row destaque">
-                <h2>Destaques</h2>
-                <div class="col-lg-4">
-                    <div class="img-book-destaque">
-                        <img src="template/capa-book.jpg" alt="Imagem de livro sem capa">
-                    </div>
-                    <h3>Heading</h3>
-                    <p>Some representative placeholder content for the three columns of text below the carousel. This is
-                        the
-                        first column.</p>
-                    <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
-                </div><!-- /.col-lg-4 -->
-                <div class="col-lg-4">
-                    <div class="img-book-destaque">
-                        <img src="template/capa-book.jpg" alt="Imagem de livro sem capa">
-                    </div>
-                    <h3>Heading</h3>
-                    <p>Another exciting bit of representative placeholder content. This time, we've moved on to the
-                        second
-                        column.</p>
-                    <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
-                </div><!-- /.col-lg-4 -->
-                <div class="col-lg-4">
-                    <div class="img-book-destaque">
-                        <img src="template/capa-book.jpg" alt="Imagem de livro sem capa">
-                    </div>
-                    <h3>Heading</h3>
-                    <p>And lastly this, the third column of representative placeholder content.</p>
-                    <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
-                </div><!-- /.col-lg-4 -->
-            </div><!-- /.row -->
-        </div>
-
-        <hr class="featurette-divider">
-
-        <div class="row align-items-md-stretch books-acervo">
-            <h2>Nosso Acervo</h2>
-            <div class="col-md-6 books-quadro">
-                <div class="h-100 bg-light border rounded-3 books">
-                    <div class="capa"><img src="template/capa-book.jpg" alt="Imagem de livro sem capa"></div>
-                    <div class="books-text">
-                        <h3>Add borders</h3>
-                        <p>Or, keep it light and add a border for some added definition to the boundaries of your
-                            content.</p>
-                        <button class="btn btn-outline-secondary" type="button">Example button</button>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-6 books-quadro">
-                <div class="h-100 bg-light border rounded-3 books">
-                    <div class="capa"><img src="template/capa-book.jpg" alt="Imagem de livro sem capa"></div>
-                    <div class="books-text">
-                        <h3>Add borders</h3>
-                        <p>Or, keep it light and add a border for some added definition to the boundaries of your
-                            content.</p>
-                        <button class="btn btn-outline-secondary" type="button">Example button</button>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-6 books-quadro">
-                <div class="h-100 bg-light border rounded-3 books">
-                    <div class="capa"><img src="template/capa-book.jpg" alt="Imagem de livro sem capa"></div>
-                    <div class="books-text">
-                        <h3>Add borders</h3>
-                        <p>Or, keep it light and add a border for some added definition to the boundaries of your
-                            content.</p>
-                        <button class="btn btn-outline-secondary" type="button">Example button</button>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-6 books-quadro">
-                <div class="h-100 bg-light border rounded-3 books">
-                    <div class="capa"><img src="template/capa-book.jpg" alt="Imagem de livro sem capa"></div>
-                    <div class="books-text">
-                        <h3>Add borders</h3>
-                        <p>Or, keep it light and add a border for some added definition to the boundaries of your
-                            content.</p>
-                        <button class="btn btn-outline-secondary" type="button">Example button</button>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-6 books-quadro">
-                <div class="h-100 bg-light border rounded-3 books">
-                    <div class="capa"><img src="template/capa-book.jpg" alt="Imagem de livro sem capa"></div>
-                    <div class="books-text">
-                        <h3>Add borders</h3>
-                        <p>Or, keep it light and add a border for some added definition to the boundaries of your
-                            content.</p>
-                        <button class="btn btn-outline-secondary" type="button">Example button</button>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-6 books-quadro">
-                <div class="h-100 bg-light border rounded-3 books">
-                    <div class="capa"><img src="template/capa-book.jpg" alt="Imagem de livro sem capa"></div>
-                    <div class="books-text">
-                        <h3>Add borders</h3>
-                        <p>Or, keep it light and add a border for some added definition to the boundaries of your
-                            content.</p>
-                        <button class="btn btn-outline-secondary" type="button">Example button</button>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </main>
-    <div class="b-example-divider"></div>
-
-    <div class="container">
-        <footer class="d-flex flex-wrap justify-content-center align-items-center py-3 my-4 border-top">
-            <div class="col-md-4 d-flex align-items-center">
-                <a href="/" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
-                    <img class="bi" src="template/logo-footer.png">
-                </a>
-                <span class="text-muted">&copy; 2021 Livros de Rua - Todos os direitos reservados</span>
-            </div>
-
-            <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
-                <li class="ms-3"><a class="text-muted" href="#"><i class="fab fa-instagram fa-2x"></i></a></li>
-            </ul>
-        </footer>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"
-        integrity="sha384-W8fXfP3gkOKtndU4JGtKDvXbO53Wy8SZCQHczT5FMiiqmQfUpWbYdTil/SxwZgAN"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.min.js"
-        integrity="sha384-skAcpIdS7UcVUC05LJ9Dxay8AXcDYfBJqt1CJ85S/CFujBsIzCIv+l9liuYLaMQ/"
-        crossorigin="anonymous"></script>
+
+    <div class="container">
+        <div class="row destaque">
+            <h2>Destaques</h2>
+            <div class="col-lg-4">
+                <div class="img-book-destaque">
+                    <img src="template/capa-book.jpg" alt="Imagem de livro sem capa">
+                </div>
+                <h3>Heading</h3>
+                <p>Some representative placeholder content for the three columns of text below the carousel. This is
+                    the
+                    first column.</p>
+                <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
+            </div><!-- /.col-lg-4 -->
+            <div class="col-lg-4">
+                <div class="img-book-destaque">
+                    <img src="template/capa-book.jpg" alt="Imagem de livro sem capa">
+                </div>
+                <h3>Heading</h3>
+                <p>Another exciting bit of representative placeholder content. This time, we've moved on to the
+                    second
+                    column.</p>
+                <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
+            </div><!-- /.col-lg-4 -->
+            <div class="col-lg-4">
+                <div class="img-book-destaque">
+                    <img src="template/capa-book.jpg" alt="Imagem de livro sem capa">
+                </div>
+                <h3>Heading</h3>
+                <p>And lastly this, the third column of representative placeholder content.</p>
+                <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
+            </div><!-- /.col-lg-4 -->
+        </div><!-- /.row -->
+    </div>
+
+    <hr class="featurette-divider">
+
+    <div class="row align-items-md-stretch books-acervo">
+        <h2>Nosso Acervo</h2>
+        <div class="col-md-6 books-quadro">
+            <div class="h-100 bg-light border rounded-3 books">
+                <div class="capa"><img src="template/capa-book.jpg" alt="Imagem de livro sem capa"></div>
+                <div class="books-text">
+                    <h3>Add borders</h3>
+                    <p>Or, keep it light and add a border for some added definition to the boundaries of your
+                        content.</p>
+                    <button class="btn btn-outline-secondary" type="button">Example button</button>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-6 books-quadro">
+            <div class="h-100 bg-light border rounded-3 books">
+                <div class="capa"><img src="template/capa-book.jpg" alt="Imagem de livro sem capa"></div>
+                <div class="books-text">
+                    <h3>Add borders</h3>
+                    <p>Or, keep it light and add a border for some added definition to the boundaries of your
+                        content.</p>
+                    <button class="btn btn-outline-secondary" type="button">Example button</button>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-6 books-quadro">
+            <div class="h-100 bg-light border rounded-3 books">
+                <div class="capa"><img src="template/capa-book.jpg" alt="Imagem de livro sem capa"></div>
+                <div class="books-text">
+                    <h3>Add borders</h3>
+                    <p>Or, keep it light and add a border for some added definition to the boundaries of your
+                        content.</p>
+                    <button class="btn btn-outline-secondary" type="button">Example button</button>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-6 books-quadro">
+            <div class="h-100 bg-light border rounded-3 books">
+                <div class="capa"><img src="template/capa-book.jpg" alt="Imagem de livro sem capa"></div>
+                <div class="books-text">
+                    <h3>Add borders</h3>
+                    <p>Or, keep it light and add a border for some added definition to the boundaries of your
+                        content.</p>
+                    <button class="btn btn-outline-secondary" type="button">Example button</button>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-6 books-quadro">
+            <div class="h-100 bg-light border rounded-3 books">
+                <div class="capa"><img src="template/capa-book.jpg" alt="Imagem de livro sem capa"></div>
+                <div class="books-text">
+                    <h3>Add borders</h3>
+                    <p>Or, keep it light and add a border for some added definition to the boundaries of your
+                        content.</p>
+                    <button class="btn btn-outline-secondary" type="button">Example button</button>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-6 books-quadro">
+            <div class="h-100 bg-light border rounded-3 books">
+                <div class="capa"><img src="template/capa-book.jpg" alt="Imagem de livro sem capa"></div>
+                <div class="books-text">
+                    <h3>Add borders</h3>
+                    <p>Or, keep it light and add a border for some added definition to the boundaries of your
+                        content.</p>
+                    <button class="btn btn-outline-secondary" type="button">Example button</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</main>
+
+<div class="b-example-divider"></div>
+
+
+<footer class="d-flex flex-wrap justify-content-center align-items-center py-3 my-4 border-top">
+    <div class="col-md-4 d-flex align-items-center">
+        <a href="/" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
+            <img class="bi" src="template/logo-footer.png">
+        </a>
+        <span class="text-muted">&copy; 2021 Livros de Rua - Todos os direitos reservados</span>
+    </div>
+
+    <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
+        <li class="ms-3"><a class="text-muted" href="#"><i class="fab fa-instagram fa-2x"></i></a></li>
+    </ul>
+</footer>
+
+
+
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"
+    integrity="sha384-W8fXfP3gkOKtndU4JGtKDvXbO53Wy8SZCQHczT5FMiiqmQfUpWbYdTil/SxwZgAN"
+    crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.min.js"
+    integrity="sha384-skAcpIdS7UcVUC05LJ9Dxay8AXcDYfBJqt1CJ85S/CFujBsIzCIv+l9liuYLaMQ/"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
