Ajustes @media screen variados.

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
 
 
-<main class="container-fluid">
+<main class="container">
     <div class="banner-home">
         <img class="banner-img img-fluid" src="template/banner-home-d.jpg" alt="Imagem com estande de livros">
         <h1 class="titulo">Livros de Rua</h1>
