Criado pagina de cadastro.

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                         <a class="nav-link text-white" href="template/about.html">Quem Somos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="#">Contato</a>
+                        <a class="nav-link text-white" href="template/contato.html">Contato</a>
                     </li>
                 </ul>
             </div>
@@ -44,15 +44,14 @@
                         <button type="button" class="btn btn-outline-light me-2">Login</button>
                     </li>
                     <li class="nav-item">
-                        <button type="button" class="btn btn-warning">Cadastrar</button>
+                        <button type="button" class="btn btn-warning"><a
+                                href="template/cad-user.html">Cadastrar</a></button>
                     </li>
                 </ul>
             </div>
         </div>
     </header>
 </nav>
-
-
 
 <main class="container">
     <div class="banner-home">
@@ -74,7 +73,7 @@
             <h2>Destaques</h2>
             <div class="col-lg-4">
                 <div class="img-book-destaque">
-                    <img src="template/capa-book.jpg" alt="Imagem de livro sem capa">
+                    <img src="template/capa-book.png" alt="Imagem de livro sem capa">
                 </div>
                 <h3>Heading</h3>
                 <p>Some representative placeholder content for the three columns of text below the carousel. This is
@@ -84,7 +83,7 @@
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4">
                 <div class="img-book-destaque">
-                    <img src="template/capa-book.jpg" alt="Imagem de livro sem capa">
+                    <img src="template/capa-book.png" alt="Imagem de livro sem capa">
                 </div>
                 <h3>Heading</h3>
                 <p>Another exciting bit of representative placeholder content. This time, we've moved on to the
@@ -94,7 +93,7 @@
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4">
                 <div class="img-book-destaque">
-                    <img src="template/capa-book.jpg" alt="Imagem de livro sem capa">
+                    <img src="template/capa-book.png" alt="Imagem de livro sem capa">
                 </div>
                 <h3>Heading</h3>
                 <p>And lastly this, the third column of representative placeholder content.</p>
@@ -109,7 +108,7 @@
         <h2>Nosso Acervo</h2>
         <div class="col-md-6 books-quadro">
             <div class="h-100 bg-light border rounded-3 books">
-                <div class="capa"><img src="template/capa-book.jpg" alt="Imagem de livro sem capa"></div>
+                <div class="capa"><img src="template/capa-book.png" alt="Imagem de livro sem capa"></div>
                 <div class="books-text">
                     <h3>Add borders</h3>
                     <p>Or, keep it light and add a border for some added definition to the boundaries of your
@@ -120,7 +119,7 @@
         </div>
         <div class="col-md-6 books-quadro">
             <div class="h-100 bg-light border rounded-3 books">
-                <div class="capa"><img src="template/capa-book.jpg" alt="Imagem de livro sem capa"></div>
+                <div class="capa"><img src="template/capa-book.png" alt="Imagem de livro sem capa"></div>
                 <div class="books-text">
                     <h3>Add borders</h3>
                     <p>Or, keep it light and add a border for some added definition to the boundaries of your
@@ -131,7 +130,7 @@
         </div>
         <div class="col-md-6 books-quadro">
             <div class="h-100 bg-light border rounded-3 books">
-                <div class="capa"><img src="template/capa-book.jpg" alt="Imagem de livro sem capa"></div>
+                <div class="capa"><img src="template/capa-book.png" alt="Imagem de livro sem capa"></div>
                 <div class="books-text">
                     <h3>Add borders</h3>
                     <p>Or, keep it light and add a border for some added definition to the boundaries of your
@@ -142,7 +141,7 @@
         </div>
         <div class="col-md-6 books-quadro">
             <div class="h-100 bg-light border rounded-3 books">
-                <div class="capa"><img src="template/capa-book.jpg" alt="Imagem de livro sem capa"></div>
+                <div class="capa"><img src="template/capa-book.png" alt="Imagem de livro sem capa"></div>
                 <div class="books-text">
                     <h3>Add borders</h3>
                     <p>Or, keep it light and add a border for some added definition to the boundaries of your
@@ -153,7 +152,7 @@
         </div>
         <div class="col-md-6 books-quadro">
             <div class="h-100 bg-light border rounded-3 books">
-                <div class="capa"><img src="template/capa-book.jpg" alt="Imagem de livro sem capa"></div>
+                <div class="capa"><img src="template/capa-book.png" alt="Imagem de livro sem capa"></div>
                 <div class="books-text">
                     <h3>Add borders</h3>
                     <p>Or, keep it light and add a border for some added definition to the boundaries of your
@@ -164,7 +163,7 @@
         </div>
         <div class="col-md-6 books-quadro">
             <div class="h-100 bg-light border rounded-3 books">
-                <div class="capa"><img src="template/capa-book.jpg" alt="Imagem de livro sem capa"></div>
+                <div class="capa"><img src="template/capa-book.png" alt="Imagem de livro sem capa"></div>
                 <div class="books-text">
                     <h3>Add borders</h3>
                     <p>Or, keep it light and add a border for some added definition to the boundaries of your
@@ -180,7 +179,7 @@
 
 
 <footer class="d-flex flex-wrap justify-content-center align-items-center py-3 my-4 border-top">
-    <div class="col-md-4 d-flex align-items-center">
+    <div class="d-flex align-items-center">
         <a href="/" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
             <img class="bi" src="template/logo-footer.png">
         </a>
