Ajustes botões Home.

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <p>Some representative placeholder content for the three columns of text below the carousel. This is
                     the
                     first column.</p>
-                <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
+                <p><button class="btn btn-outline-success btn-sm" href="">+ Detalhes</button></p>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4">
                 <div class="img-book-destaque">
@@ -89,7 +89,7 @@
                 <p>Another exciting bit of representative placeholder content. This time, we've moved on to the
                     second
                     column.</p>
-                <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
+                <p><button class="btn btn-outline-success btn-sm" href="">+ Detalhes</button></p>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4">
                 <div class="img-book-destaque">
@@ -97,7 +97,7 @@
                 </div>
                 <h3>Heading</h3>
                 <p>And lastly this, the third column of representative placeholder content.</p>
-                <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
+                <p><button class="btn btn-outline-success btn-sm" href="">+ Detalhes</button></p>
             </div><!-- /.col-lg-4 -->
         </div><!-- /.row -->
     </div>
@@ -113,7 +113,7 @@
                     <h3>Add borders</h3>
                     <p>Or, keep it light and add a border for some added definition to the boundaries of your
                         content.</p>
-                    <button class="btn btn-outline-secondary" type="button">Example button</button>
+                    <button class="btn btn-outline-success btn-sm" href="">+ Detalhes</button>
                 </div>
             </div>
         </div>
@@ -124,7 +124,7 @@
                     <h3>Add borders</h3>
                     <p>Or, keep it light and add a border for some added definition to the boundaries of your
                         content.</p>
-                    <button class="btn btn-outline-secondary" type="button">Example button</button>
+                    <button class="btn btn-outline-success btn-sm" href="">+ Detalhes</button>
                 </div>
             </div>
         </div>
@@ -135,7 +135,7 @@
                     <h3>Add borders</h3>
                     <p>Or, keep it light and add a border for some added definition to the boundaries of your
                         content.</p>
-                    <button class="btn btn-outline-secondary" type="button">Example button</button>
+                    <button class="btn btn-outline-success btn-sm" href="">+ Detalhes</button>
                 </div>
             </div>
         </div>
@@ -146,7 +146,7 @@
                     <h3>Add borders</h3>
                     <p>Or, keep it light and add a border for some added definition to the boundaries of your
                         content.</p>
-                    <button class="btn btn-outline-secondary" type="button">Example button</button>
+                    <button class="btn btn-outline-success btn-sm" href="">+ Detalhes</button>
                 </div>
             </div>
         </div>
@@ -157,7 +157,7 @@
                     <h3>Add borders</h3>
                     <p>Or, keep it light and add a border for some added definition to the boundaries of your
                         content.</p>
-                    <button class="btn btn-outline-secondary" type="button">Example button</button>
+                    <button class="btn btn-outline-success btn-sm" href="">+ Detalhes</button>
                 </div>
             </div>
         </div>
@@ -168,7 +168,7 @@
                     <h3>Add borders</h3>
                     <p>Or, keep it light and add a border for some added definition to the boundaries of your
                         content.</p>
-                    <button class="btn btn-outline-secondary" type="button">Example button</button>
+                    <button class="btn btn-outline-success btn-sm" href="">+ Detalhes</button>
                 </div>
             </div>
         </div>
